// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the shared cross-implementation fixture > maps the Rust-written database to a stable result 1`] = `
{
  "items": [
    {
      "createdAt": "<timestamp>",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "Root Note",
      "notes": "A note with no password at all.",
      "password": "",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "<timestamp>",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "<timestamp>",
      "favorite": false,
      "fields": [
        {
          "hidden": false,
          "name": "Recovery Code",
          "value": "abcd-efgh-ijkl",
        },
      ],
      "folder": "Personal/Email",
      "kind": "login",
      "name": "Example Mail",
      "notes": "First line of the note.
Second line.

Fourth line, after a blank one.",
      "password": "fixture-password-one",
      "passwordChangedAt": null,
      "totp": "otpauth://totp/Example%20Mail?secret=GEZDGNBVGY3TQOJQGEZDGNBVGY3TQOJQ&issuer=Example&digits=6&period=30&algorithm=SHA1",
      "updatedAt": "<timestamp>",
      "uris": [
        {
          "match": "domain",
          "uri": "https://mail.example.com/",
        },
      ],
      "username": "alice@example.com",
    },
    {
      "createdAt": "<timestamp>",
      "favorite": false,
      "fields": [],
      "folder": "Personal/Email",
      "kind": "login",
      "name": "Example Mail (2)",
      "notes": "",
      "password": "fixture-password-two",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "<timestamp>",
      "uris": [],
      "username": "bob@example.com",
    },
    {
      "createdAt": "<timestamp>",
      "favorite": false,
      "fields": [
        {
          "hidden": true,
          "name": "API Key",
          "value": "fixture-api-key",
        },
      ],
      "folder": "Shared/Ops",
      "kind": "login",
      "name": "Deploy Token",
      "notes": "",
      "password": "fixture-deploy-token",
      "passwordChangedAt": null,
      "totp": "otpauth://totp/Deploy%20Token?secret=GEZDGNBVGY3TQOJQGEZDGNBVGY3TQOJQ&digits=8&period=60&algorithm=SHA256",
      "updatedAt": "<timestamp>",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "<timestamp>",
      "favorite": false,
      "fields": [],
      "folder": "Weird_Name",
      "kind": "login",
      "name": "Tabhere",
      "notes": "",
      "password": "fixture-weird",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "<timestamp>",
      "uris": [],
      "username": "",
    },
  ],
  "skipped": [],
  "source": "keepass-kdbx",
  "warnings": [],
}
`;

exports[`what a KeePass database becomes > maps a KeePassXC passkey and reports what it left behind 1`] = `
{
  "items": [
    {
      "authenticator": "platform",
      "createdAt": "2026-01-02T03:04:05.000Z",
      "credentialIdB64": "Y3JlZC1pZC0wMDE=",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "passkey",
      "name": "example.org",
      "notes": "",
      "passwordChangedAt": null,
      "publicKeyB64": "",
      "rpId": "example.org",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "username": "ada@example.org",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "Has an attachment",
      "notes": "",
      "password": "with a file",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
  ],
  "skipped": [
    {
      "name": "Half a passkey",
      "reason": "A passkey entry without a relying party and a credential id has nothing this vault could recognise the credential by.",
    },
  ],
  "source": "keepass-kdbx",
  "warnings": [
    "1 attachment was left behind. This vault stores fields, not files.",
    "1 passkey is imported as a reference only. KeePassXC keeps the private key in the entry; this vault never holds one, so the credential has to be registered again before it can be used.",
  ],
}
`;

exports[`what a KeePass database becomes > maps a database of ordinary logins, groups, and fields 1`] = `
{
  "items": [
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "Unfiled Login",
      "notes": "",
      "password": "top-level",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "root",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [
        {
          "hidden": false,
          "name": "Employee Number",
          "value": "0042",
        },
        {
          "hidden": true,
          "name": "Recovery Token",
          "value": "rt-9999",
        },
        {
          "hidden": false,
          "name": "Tags",
          "value": "finance, quarterly",
        },
      ],
      "folder": "Work",
      "kind": "login",
      "name": "Payroll",
      "notes": "Two
lines",
      "password": "payroll-secret",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [
        {
          "match": "domain",
          "uri": "https://payroll.example.com",
        },
      ],
      "username": "ada@example.com",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": "Work/Vendors",
      "kind": "login",
      "name": "Courier",
      "notes": "",
      "password": "parcel",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "dispatch",
    },
  ],
  "skipped": [],
  "source": "keepass-kdbx",
  "warnings": [],
}
`;

exports[`what a KeePass database becomes > maps every shape of TOTP a KeePass entry can carry 1`] = `
{
  "items": [
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "URI form",
      "notes": "",
      "password": "a",
      "passwordChangedAt": null,
      "totp": "otpauth://totp/Issuer:me?secret=JBSWY3DPEHPK3PXP&issuer=Issuer",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "Query form",
      "notes": "",
      "password": "b",
      "passwordChangedAt": null,
      "totp": "JBSWY3DPEHPK3PXP",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "TimeOtp defaults",
      "notes": "",
      "password": "c",
      "passwordChangedAt": null,
      "totp": "otpauth://totp/TimeOtp%20defaults?secret=JBSWY3DPEHPK3PXP&digits=6&period=30&algorithm=SHA1",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "TimeOtp tuned",
      "notes": "",
      "password": "d",
      "passwordChangedAt": null,
      "totp": "otpauth://totp/TimeOtp%20tuned?secret=JBSWY3DPEHPK3PXP&digits=8&period=45&algorithm=SHA512",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": null,
      "kind": "login",
      "name": "Not a TOTP",
      "notes": "",
      "password": "e",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
  ],
  "skipped": [],
  "source": "keepass-kdbx",
  "warnings": [],
}
`;

exports[`what a KeePass database becomes > maps the corners: collisions, empty titles, separators, and the bin 1`] = `
{
  "items": [
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": "Same_Group",
      "kind": "login",
      "name": "Twin",
      "notes": "",
      "password": "1",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": "Same_Group",
      "kind": "login",
      "name": "Twin (2)",
      "notes": "",
      "password": "2",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": "Same_Group",
      "kind": "login",
      "name": "Twin (3)",
      "notes": "",
      "password": "3",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": "Same_Group",
      "kind": "login",
      "name": "_",
      "notes": "",
      "password": "nameless",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
    {
      "createdAt": "2026-01-02T03:04:05.000Z",
      "favorite": false,
      "fields": [],
      "folder": "Same_Group",
      "kind": "login",
      "name": "_ (2)",
      "notes": "",
      "password": "no title field at all",
      "passwordChangedAt": null,
      "totp": "",
      "updatedAt": "2026-02-03T04:05:06.000Z",
      "uris": [],
      "username": "",
    },
  ],
  "skipped": [
    {
      "name": "Deleted",
      "reason": "In the database's recycle bin.",
    },
  ],
  "source": "keepass-kdbx",
  "warnings": [],
}
`;
